adicição de mais funcionalidades e tecnologias: Stripe, Redis e finalizado o acesso driver no painel dashboard web
